<resources>
    <string name="error_conexion">Ocurrió un problema, revisa la conexión e intenta nuevamente</string>
    <string name="error_obtener_documento">Ocurrió un error en la lectura de los documentos</string>
    <string name="error_crear_directorio">Ocurrió un error en la creación del directorio de imágenes</string>
    <string name="error_guardar_pdf">Ocurrió un error al guardar el pdf</string>
    <string name="error_guardar_catalogos">Ocurrió un problema al guardar los catálogos</string>
    <string name="error_guardar_tramites">Ocurrió un problema al guardar el listado de documentos asociados a los trámites</string>
    <string name="aceptar">Aceptar</string>
    <string name="error">ERROR</string>
    <string name="error_envio">ERROR EN EL ENVÍO</string>
    <string name="error_conexion_titulo">ERROR DE CONEXIÓN</string>
    <string name="error_catalogos">ERROR DE CATÁLOGOS</string>
    <string name="error_motor_cp">El motor de Códigos Postales, no se encuentra instalado</string>
    <string name="error_motor_imagenes">El motor de Captura de imágenes, no se encuentra instalado</string>
    <string name="datosIncorrectos">DATOS INCORRECTOS</string>
    <string name="error_oauth">ERROR TOKEN</string>
    <string name="contenido">Tu usuario o contraseña son incorrectos, verifica los datos e inténtalo de nuevo. Después de 3 intentos, tu usuario será desactivado</string>
    <string name="login_titulo">Pensiona-T</string>
    <string name="login_hint_usuario">Usuario</string>
    <string name="login_hint_contrasena">Contraseña</string>
    <string name="login_ingresar">Ingresar</string>
    <string name="login_logo_profuturo">logotipo Profuturo</string>
    <string name="login_imagen_edificio">imagen edificio oficinas Profuturo</string>
    <string name="login_icono_alerta_error">imagen de señalización formato inválido</string>
    <string name="login_error_formato">formato inválido</string>
    <string name="login_error_permisos">Para el correcto funcionamiento, es necesario aceptar los permisos</string>
    <string name="busqueda_imagen_empleado">Imagen generica empleado</string>
    <string name="busqueda_bienvenido">Bienvenido</string>
    <string name="busqueda_instrucciones">Para comenzar tu búsqueda, selecciona un tipo de búsqueda e ingresa el dato del cliente</string>
    <string name="busqueda_empleado">Empleado %1$s</string>
    <string name="busqueda_buscar">Buscar</string>
    <string name="busqueda_titulo_spinner">Tipo de búsqueda</string>
    <string name="busqueda_guardar">Guardar</string>
    <string name="busqueda_hint_busqueda">Dato del cliente</string>
    <string name="busqueda_hint_nss">Ingresa NSS</string>
    <string name="busqueda_hint_poliza">Ingresa Póliza</string>
    <string name="busqueda_hint_oferta">Ingresa Folio oferta</string>
    <string name="busqueda_hint_curp">Ingresa CURP</string>
    <string-array name="busqueda_tipo_spinner">
        <item>Seleccionar</item>
        <item>NSS</item>
        <item>Póliza</item>
        <item>Folio Oferta</item>
        <item>CURP</item>
    </string-array>
    <string name="no_existe_registro">NO EXISTE REGISTRO</string>
    <string name="cerrar_sesion_titulo">CERRAR SESIÓN</string>
    <string name="cerrar_sesion_aviso">Tu sesión será cerrada, los datos ingresados no se guardarán</string>
    <string name="cerrar_sesion_confirmación">¿Deseas continuar?</string>
    <string name="cerrar_sesion_si">Si</string>
    <string name="cerrar_sesion_no">No</string>
    <string name="cerrar_sesion_icono_alerta">imagen de señalización cierre de sesión</string>
    <string name="caso_cerrado_titulo">SIN DATOS SUFICIENTES</string>
    <string name="caso_cerrado_aviso">No existen datos suficientes del pensionado</string>
    <string name="caso_cerrado_confirmacion">¿Deseas precapturar?</string>
    <string name="componente_familiar_instituto">Instituto</string>
    <string name="componente_familiar_resultados">%1$s resultados</string>
    <string name="componente_familiar_resultado">%1$s resultado</string>
    <string name="componente_familiar_tipo_pension">Tipo de pensión</string>
    <string name="componente_familiar_estatus">Estatus</string>
    <string name="componente_familiar_siguiente">Siguiente</string>
    <string name="componente_familiar_cancelar">Cancelar</string>
    <string name="componente_familiar_parentesco">Parentesco</string>
    <string name="componente_familiar_nacimiento">Nacimiento</string>
    <string name="componente_familiar_sexo">Sexo</string>
    <string name="componente_familiar_titulo">Datos del cliente</string>
    <string name="componente_familiar_subtitulo">Selección del solicitante</string>
    <string name="componente_familiar_cancelar_tramite">CANCELAR TRÁMITE</string>
    <string name="componente_familiar_cancelar_aviso">El trámite iniciado será cancelado, los datos ingresados no se guardarán</string>
    <string name="componente_familiar_cancelar_confirmacion">¿Deseas cancelar?</string>
    <string name="formulario_instrucciones">Completa los diferentes datos del solicitante\npara proceder con el trámite</string>
    <string name="formulario_titulo">Formulario de trámite</string>
    <string name="formulario_subtitulo">Verificación de datos</string>
    <string name="formulario_general_campos_obligatorios">* Campos obligatorios</string>
    <string name="formulario_general_formato_invalido">Formato inválido</string>
    <string name="formulario_general_nombre">Nombre (s)*</string>
    <string name="formulario_general_appaterno">Apellido paterno*</string>
    <string name="formulario_general_apmaterno">Apellido materno</string>
    <string name="formulario_general_nacionalidad_requerido">Nacionalidad*</string>
    <string name="formulario_general_pais_requerido">País de nacimiento*</string>
    <string name="formulario_general_nacimiento">Fecha de nacimiento*</string>
    <string name="formulario_general_ocupacion_requerido">Ocupación/Profesión*</string>
    <string name="formulario_general_calle">Calle*</string>
    <string name="formulario_general_numero">Número Exterior*</string>
    <string name="formulario_general_numero_interior">Número Interior</string>
    <string name="formulario_general_cp">Código Postal*</string>
    <string name="formulario_general_colonia_requerido">Colonia*</string>
    <string name="formulario_general_municipio">Alcaldía / Municipio*</string>
    <string name="formulario_general_ciudad">Ciudad / Población*</string>
    <string name="formulario_general_estado">Entidad Federativa / Estado*</string>
    <string name="formulario_general_curp">CURP*</string>
    <string name="formulario_general_rfc">RFC*</string>
    <string name="formulario_general_efirma">E-firma</string>
    <string name="formulario_general_telefono">Teléfono casa (10 dítigos)</string>
    <string name="formulario_general_celular">Teléfono celular (10 dígitos)*</string>
    <string name="formulario_general_otro">Otro teléfono (10 dígitos)</string>
    <string name="formulario_general_disponible_desde">Disponible desde</string>
    <string name="formulario_general_disponible_hasta">Disponible hasta</string>
    <string name="formulario_general_correo">Correo electrónico</string>
    <string name="formulario_img_progress">icono indicador de progreso de registro de formulario</string>
    <string name="formulario_banco">Banco*</string>
    <string name="formulario_tipo_cuenta">Tipo de cuenta*</string>
    <string name="formulario_cuenta_hint">Cuenta CLABE*</string>
    <string-array name="tipo_cuenta_spinner">
        <item>Seleccionar</item>
        <item>CLABE</item>
        <item>TELEFONO</item>
        <item>NUMERO DE TARJETA</item>
    </string-array>
    <string name="formulario_banco_hint">Banco del cliente</string>
    <string name="formulario_tipo_cuenta_hint">Ingresa Tipo de Cuenta</string>
    <string name="formulario_clabe_hint">Ingresa Póliza</string>
    <string name="formulario_referencias_campos_obligatorios">* Campos obligatorios (una referencia es obligatoria)</string>
    <string name="formulario_referencias_referencia1">Referencia 1*</string>
    <string name="formulario_referencias_parentesco">Parentesco*</string>
    <string name="formulario_referencias_referencia2">Referencia 2</string>
    <string name="tramite_instrucciones">Elige el tipo de solicitud requerida por el cliente\npara realizar la digitalización de documentos</string>
    <string name="tramite_tipo">Tipo de trámite</string>
    <string name="tramite_subtipo">Trámite</string>
    <string name="tramite_obligatorios">Documentos obligatorios para digitalizar</string>
    <string name="tramite_titulo">Trámite</string>
    <string name="tramite_subtitulo">Selección del trámite solicitado</string>
    <string name="tramite_caja1">Trámite</string>
    <string name="tramite_caja2">Queja</string>
    <string name="tramite_caja3">Investigación</string>
    <string name="digitalizacion_instrucciones">Captura los documentos obligatorios \n requeridos para el trámite</string>
    <string name="digitalizacion_titulo">Digitalización</string>
    <string name="digitalizacion_subtitulo">Captura de documentos</string>
    <string name="digitalizacion_documentos_obligatorios">Documentos obligatorios para digitalizar</string>
    <string name="digitalizacion_captura_requerida">Capturas del documento (mínimo una):</string>
    <string name="digitalizacion_observaciones">Observaciones</string>
    <string name="digitalizacion_obligatorio">OBLIGATORIOS </string>
    <string name="digitalizacion_atras">imagen que hace referencia al botón atras</string>
    <string name="digitalizacion_eliminar">imagen que hace referencia al botón eliminar</string>
    <string name="digitalizacion_eliminar_captura_titulo">ELIMINAR CAPTURA</string>
    <string name="digitalizacion_eliminar_captura_detalle">La captura del documento será eliminada y no podrá recuperarse </string>
    <string name="digitalizacion_eliminar_captura_confirmacion">¿Deseas eliminar?</string>
    <string name="digitalizacion_error_captura">Ocurrió un problema con el motor de imágenes, intenta nuevamente</string>
    <string name="firma_ayuda">Firma en el recuadro de abajo</string>
    <string name="firma_observaciones">Firma lo más parecido a tu identificación oficial</string>
    <string name="firma_guardar_continuar">Guardar y continuar</string>
    <string name="firma_excepcion">Excepción</string>
    <string name="excepcion_titulo">EXCEPCIÓN DE FIRMA</string>
    <string name="excepcion_descripcion">Elige el tipo de excepción por la cual el cliente esta imposibilitado a firmar</string>
    <string name="excepcion_tipo">Tipo de excepción</string>
    <string name="excepcion_firma">Excepción de firma</string>
    <string name="firma_titulo">Firmas de acuse de trámite</string>
    <string name="formulario_identificación">Formato de Identificación y Servicio al Pensionado</string>
    <string name="firma_instrucciones">Revisa los datos con el cliente y captura la\n firma en el recuadro correspondiente</string>
    <string name="datos_solicitante">DATOS DEL SOLICITANTE</string>
    <string name="imss">IMSS</string>
    <string name="confirmacion_titulo">ENVÍO REALIZADO</string>
    <string name="messaje_autentication">Para poder continuar con el proceso, el usuario debe realizar una autenticación, y contar con algún medio disponible:\n\n-Teléfono celular\n-Correo electrónico\n-Identificación INE o Pasaporte\n-Acceso a internet\n\n\n¿El usuario cuenta con algún medio disponible?</string>
</resources>