<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_firma_separador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageButton
        android:id="@+id/btn_firma_atras"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/digitalizacion_atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flecha_atras" />

    <TextView
        android:id="@+id/txt_firma_solicitante"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="20dp"
        android:maxLines="2"
        android:textAlignment="center"
        android:textColor="@color/colorPrimario"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/txt_firma_ayuda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_firma_ayuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/firma_ayuda"
        android:textColor="@color/colorAzulGrisaceo"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view_firma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/view_firma"
        android:layout_width="617dp"
        android:layout_height="0dp"
        android:layout_marginStart="174dp"
        android:layout_marginEnd="175dp"
        android:background="@drawable/fondo_firma_borde"
        android:orientation="vertical"
        android:paddingBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_firma_guardada"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/imss" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_firma_observaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/firma_observaciones"
        android:textColor="@color/colorAzulGrisaceo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_firma" />

    <View
        android:id="@+id/view5"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorGris"
        app:layout_constraintBottom_toTopOf="@+id/btn_firma_excepcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_firma_continuar"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/fondo_boton_gris"
        android:text="@string/firma_guardar_continuar"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn_diobujarFirma_cancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="65dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/fondo_boton_borde_azul"
        android:gravity="center"
        android:text="@string/componente_familiar_cancelar"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimario"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_firma_excepcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view5"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/btn_firma_excepcion"
        style="@style/ButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/fondo_boton_borde_azul"
        android:text="@string/firma_excepcion"
        android:textColor="@color/colorPrimario"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.25" />

    <ImageButton
        android:id="@+id/btn_firma_eliminar"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="21dp"
        android:background="@drawable/ic_eliminar_gris"
        android:contentDescription="@string/digitalizacion_eliminar"
        app:layout_constraintBottom_toBottomOf="@+id/view_firma"
        app:layout_constraintStart_toEndOf="@+id/view_firma" />

    <TextView
        android:id="@+id/txt_excepcion_firma"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/excepcion_firma"
        android:textColor="@color/colorPrimario"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_firma_observaciones" />

    <TextView
        android:id="@+id/txt_excepcion_firma_causa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/colorPrimario"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_excepcion_firma" />


</androidx.constraintlayout.widget.ConstraintLayout>