<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="440dp"
        android:layout_height="326dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_excepcion_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:text="@string/excepcion_titulo"
            android:textColor="@color/colorTextSubtitle"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_excepcion_ayuda"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="93dp"
            android:text="@string/excepcion_descripcion"
            android:textAlignment="center"
            android:textColor="@color/colorGrisMedio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_excepcion_titulo" />

        <TextView
            android:id="@+id/txt_excepcion_spinner_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="27dp"
            android:text="@string/excepcion_tipo"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/spinner_excepcion_opciones"
            app:layout_constraintTop_toBottomOf="@+id/txt_excepcion_ayuda" />

        <com.mx.profuturo.android.pensionat.vistasCustomizadas.SpinnerCaja
            android:id="@+id/spinner_excepcion_opciones"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="56dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="56dp"
            android:background="@drawable/fondo_spinner_borde"
            android:overlapAnchor="false"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_excepcion_spinner_titulo" />

        <Button
            android:id="@+id/btn_excepciones_guardar"
            android:layout_width="152dp"
            android:layout_height="32dp"
            android:layout_marginEnd="56dp"
            android:layout_marginBottom="43dp"
            android:background="@drawable/fondo_boton_gris"
            android:text="@string/busqueda_guardar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_excepciones_cancelar"
            android:layout_width="152dp"
            android:layout_height="32dp"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="43dp"
            android:background="@drawable/fondo_boton_borde_azul"
            android:text="@string/componente_familiar_cancelar"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimario"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>