<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_titulo_dialogo_mensage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:padding="5dp"
            android:text="@string/messaje_autentication"
            android:gravity="center"
            android:textSize="21sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="90dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancelar"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:background="@drawable/fondo_boton_borde_azul"
                android:gravity="center"
                android:text="@string/cerrar_sesion_no"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimario"
                android:textSize="18sp"
                android:layout_marginRight="15dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_aceptar"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:background="@drawable/fondo_boton_azul"
                android:text="@string/cerrar_sesion_si"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>