<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="303dp"
        android:layout_height="287dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_confirmacion"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_exito"
            android:contentDescription="@string/login_imagen_edificio"
            app:layout_constraintBottom_toTopOf="@+id/txt_confirmacion_titulo"
            app:layout_constraintEnd_toEndOf="@+id/txt_confirmacion_titulo"
            app:layout_constraintStart_toStartOf="@+id/txt_confirmacion_titulo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/txt_confirmacion_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            android:text="@string/confirmacion_titulo"
            android:textColor="@color/colorTextSubtitle"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_confirmacion" />

        <TextView
            android:id="@+id/txt_confirmacion_mensaje"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_confirmacion_titulo" />

        <Button
            android:id="@+id/btn_confirmacion_aceptar"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/fondo_boton_azul"
            android:text="@string/aceptar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
